@@ -150,6 +150,7 @@ Chronological list of authors
   - Edis Jakupovic
   - Nicholas Craven
   - Mieczyslaw Torchala
+  - Haochuan Chen
 
 External code
 -------------
