@@ -132,7 +132,7 @@ MDA2PMD = {
 }
 
 def get_indices_from_subset(i, atomgroup=None, universe=None):
-    return atomgroup.index(universe.atoms[i])
+    return atomgroup[universe.atoms[i]]
 
 class ParmEdConverter(base.ConverterBase):
     """Convert MDAnalysis AtomGroup or Universe to ParmEd :class:`~parmed.structure.Structure`.
@@ -262,8 +262,10 @@ class ParmEdConverter(base.ConverterBase):
             struct.box = None
 
         if hasattr(ag_or_ts, 'universe'):
+            atomgroup = {atom: index for index,
+                         atom in enumerate(list(ag_or_ts))}
             get_atom_indices = functools.partial(get_indices_from_subset,
-                                                 atomgroup=list(ag_or_ts),
+                                                 atomgroup=atomgroup,
                                                  universe=ag_or_ts.universe)
         else:
             get_atom_indices = lambda x: x
