@@ -15,7 +15,8 @@ The rules for this file:
 ------------------------------------------------------------------------------
 ??/??/?? tylerjereddy, richardjgowers, IAlibay, hmacdope, orbeckst, cbouy,
          lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney,
-         calcraven，xiki-tempula, mieczyslaw, manuel.nuno.melo, PicoCentauri
+         calcraven，xiki-tempula, mieczyslaw, manuel.nuno.melo, PicoCentauri,
+         hanatok
 
   * 2.0.0
 
@@ -73,6 +74,7 @@ Fixes
     would create a test artifact (Issue #2979, PR #2981)
 
 Enhancements
+  * Improved performance of the ParmEd converter (Issue #3028, PR #3029)
   * Improved analysis class docstrings, and added missing classes to the 
     `__all__` list (PR #2998)
   * The PDB writer gives more control over how to write the atom ids
